United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7092236 java/util/EnumSet/EnumSetBash.java fails
7092236 : java/util/EnumSet/EnumSetBash.java fails

Details
Type:
Bug
Submit Date:
2011-09-19
Status:
Closed
Updated Date:
2012-12-05
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
solaris,generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
6u29,7u2
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Backport:
Duplicate:
Duplicate:

Sub Tasks

Description
The test fails with HS22 b06 and JDK6u29 b01. The failure is reproducible solaris-i586 with VM '-server -Xmixed' options after about 10 iterations.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx22/hotspot/rev/953ffc48897d
                                     
2011-10-13
EVALUATION

See main CR
                                     
2011-10-07
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/eda6988c0d81
                                     
2011-09-21
EVALUATION

7092236: java/util/EnumSet/EnumSetBash.java fails
Reviewed-by: kvn, twisti, jrose

The changes for 7083184 moved an early bailout outside of the guarding
test which caused us to skip checking some dependencies when classes
are loaded during compilation.  The fix is to move it back inside.  I
also simplified the logic since I found it quite confusing.  Tested by
failing test from bug report.  I suspect this is the same issue that
was causing the intermittent JPRT failures with
IncompatibleClassChangeError.
                                     
2011-09-21
EVALUATION

The changes for 7083184 moved an early bailout outside of the guarding test which caused us to skip checking some dependencies when classes are loaded during compilation.
                                     
2011-09-20
PUBLIC COMMENTS

Please add explanation. Why it is a test bug, not product bug.
                                     
2011-09-19
PUBLIC COMMENTS

This is likely a product, not test bug. I've changed subcategory.
                                     
2011-09-19



Hardware and Software, Engineered to Work Together