7092236: java/util/EnumSet/EnumSetBash.java fails

Reviewed-by: kvn, twisti, jrose